add james' comments

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -51,6 +51,7 @@ ul, li {
 }
 
 .tile {
+  /* clever use of opacity! */
   opacity: 0.4;
   -webkit-transition: opacity 250ms ease;
   -moz-transition: opacity 250ms ease;
@@ -69,6 +70,7 @@ ul, li {
 .green {
   height: 290px;
   -webkit-border-radius: 150px 150px 150px 150px;
+  /* try broder-radius: 50%; also */
   border-radius: 150px 150px 150px 150px;
   position: absolute;
 }
